[package]
name = "dice-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dice_shared = { path = "../dice-shared"}
tnet = { path = "../../tnet", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.5.0"
sqlite = "0.36.1"
bcrypt = "0.16.0"
rand = "0.8.5"
once_cell = "1.20.2"
